--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -20,3 +20,9 @@ entrypoint = "./functions/stripe-webhooks/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/stripe-webhooks/*.html" ]
+
+[functions.create-customer-portal-session]
+enabled = true
+verify_jwt = false
+import_map = "./functions/create-checkout-session/deno.json"
+entrypoint = "./functions/create-customer-portal-session/index.ts"
