--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ STRIPE_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxx
 
 # Note: Copy this file to your project root as '.env' and replace the placeholder values
 # with your actual configuration values. Make sure to add '.env' to your .gitignore file. 
+
+VITE_SUPABASE_URL=
+VITE_SUPABASE_ANON_KEY=
